finalized branding stategy section - not responsive

--- a/src/components/branding-strategy.html
+++ b/src/components/branding-strategy.html
@@ -28,8 +28,11 @@
         </ul>
 
     </div>
-    <div class="w-1/2 bg-no-repeat bg-contain" style="background-image: url('src/assets/Vector 5.png');">
-       
+    <div class="w-1/2 bg-no-repeat bg-contain object-center bg-center flex items-center justify-center text-sm" style="background-image: url('src/assets/Vector 5.png');">
+       <p class="w-1/2 text-white  px-5">Our strategic approach is a collaborative journey that starts with analysing the initial situation and leads to messages
+    that cut through the information overload. We take care of content production and maintain relationships with
+    multipliers to position your brand in the best possible way. From analysis to implementation, we accompany you every
+    step of the way, ensuring that every measure is effective.</p>
     </div>
 </div>
 </div>
