branding strategy section responsice

--- a/src/components/branding-strategy.html
+++ b/src/components/branding-strategy.html
@@ -1,38 +1,38 @@
-<div class=" max-w-7xl mx-auto">
-  <div class="pt-28 pb-10 flex justify-center flex-col">
-    <p class="text-2xl">
-        We are a Berlin-based communications agency specialising in helping companies and brands find their voice and position
-        themselves. Whether it's brand building, identity sharpening, or communication strategy, we bring a fresh perspective to
-        established structures, develop tailor-made communication solutions, and ensure that messages resonate. With over a
-        decade of experience, we have honed our skills in giving brands their unmistakable identity and making them visible in
-        the long term.
-    </p>
-    <div class="flex justify-center">
-        <img src="src/assets/Vector 6.png" class="mt-10 w-36 sticky top-0" alt="">
-    </div>
-</div>  
-<div class="flex">
-    <div class="w-1/2">
-        <ul class="text-3xl font-bold w-3/4 space-y-12 mx-auto">
-        <li>Brand strategy</li>
-        
-        <li>Corporate Identity & Website development</li>
-        
-        <li>SEO & copywriting</li>
-        
-        <li>Media Relations</li>
-        
-        <li>Digital marketing & content production</li>
-        
-        <li>Influencer relations </li>
-        </ul>
+<div class=" max-w-7xl mx-auto lg:max-w-5xl md:w-3/4 w-11/12">
+    <div class="pt-28 pb-10 flex justify-center flex-col">
+        <p class="lg:text-2xl text-lg">
+            We are a Berlin-based communications agency specialising in helping companies and brands find their voice and position
+            themselves. Whether it's brand building, identity sharpening, or communication strategy, we bring a fresh perspective to
+            established structures, develop tailor-made communication solutions, and ensure that messages resonate. With over a
+            decade of experience, we have honed our skills in giving brands their unmistakable identity and making them visible in
+            the long term.
+        </p>
+        <div class="flex justify-center">
+            <img src="src/assets/Vector 6.png" class="mt-10 w-36 sticky top-0" alt="">
+        </div>
+    </div>  
+    <div class="flex flex-wrap">
+        <div class="lg:w-1/2 w-full">
+            <ul class="lg:text-3xl text-xl font-bold w-3/4 xl:space-y-10 space-y-4 mx-auto">
+            <li>Brand strategy</li>
+            
+            <li>Corporate Identity & Website development</li>
+            
+            <li>SEO & copywriting</li>
+            
+            <li>Media Relations</li>
+            
+            <li>Digital marketing & content production</li>
+            
+            <li>Influencer relations </li>
+            </ul>
 
+        </div>
+        <div class="lg:w-1/2 w-full bg-no-repeat bg-contain object-center bg-center flex items-center justify-center text-sm h-[500px]" style="background-image: url('src/assets/Vector 5.png');">
+        <p class="md:w-1/2 w-3/4 text-white  px-5">Our strategic approach is a collaborative journey that starts with analysing the initial situation and leads to messages
+        that cut through the information overload. We take care of content production and maintain relationships with
+        multipliers to position your brand in the best possible way. From analysis to implementation, we accompany you every
+        step of the way, ensuring that every measure is effective.</p>
+        </div>
     </div>
-    <div class="w-1/2 bg-no-repeat bg-contain object-center bg-center flex items-center justify-center text-sm" style="background-image: url('src/assets/Vector 5.png');">
-       <p class="w-1/2 text-white  px-5">Our strategic approach is a collaborative journey that starts with analysing the initial situation and leads to messages
-    that cut through the information overload. We take care of content production and maintain relationships with
-    multipliers to position your brand in the best possible way. From analysis to implementation, we accompany you every
-    step of the way, ensuring that every measure is effective.</p>
-    </div>
-</div>
 </div>
