--- a/src/components/branding-strategy.html
+++ b/src/components/branding-strategy.html
@@ -1,4 +1,4 @@
-<div class=" max-w-7xl mx-auto lg:max-w-5xl md:w-3/4 w-11/12">
+<div class=" lg:max-w-7xl mx-auto md:w-3/4 w-11/12">
     <div class="pt-28 pb-10 flex justify-center flex-col">
         <p class="lg:text-2xl text-lg">
             We are a Berlin-based communications agency specialising in helping companies and brands find their voice and position
@@ -7,11 +7,14 @@
             decade of experience, we have honed our skills in giving brands their unmistakable identity and making them visible in
             the long term.
         </p>
-        <div class="flex justify-center">
-            <img src="src/assets/Vector 6.png" class="mt-10 w-36 sticky top-0" alt="">
+        <div class="sticky top-0">
+ <div class="flex justify-center  z-10">
+            <img src="src/assets/Vector 6.png" class="mt-10 w-36 " alt="">
         </div>
+        </div>
+       
     </div>  
-    <div class="flex flex-wrap">
+    <div class="flex flex-wrap py-28 space-y-10 md:space-y-0">
         <div class="lg:w-1/2 w-full">
             <ul class="lg:text-3xl text-xl font-bold w-3/4 xl:space-y-10 space-y-4 mx-auto">
             <li>Brand strategy</li>
