--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -6,7 +6,7 @@
   
 
 	<div 
-	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black text-[1.5rem] font-bold leading-tight">
+	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black font-[outfill] leading-tight">
 	  <a href="/ace-hotel" class="block hover:text-gray-500 transition">Ace Hotel</a>
 	  <a href="/armedangels" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
 	  <a href="/berlin-design-week" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
