--- a/src/components/customer.html
+++ b/src/components/customer.html
@@ -6,7 +6,7 @@
   
 
 	<div 
-	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black font-[outfill] leading-tight">
+	  class="absolute right-28 top-1/2 transform -translate-y-1/2 w-[318px] max-h-[900px] overflow-hidden text-right text-black font-semibold leading-tight">
 	  <a href="/ace-hotel" class="block hover:text-gray-500 transition">Ace Hotel</a>
 	  <a href="/armedangels" class="block hover:text-gray-500 transition">ARMEDANGELS</a>
 	  <a href="/berlin-design-week" class="block hover:text-gray-500 transition">BERLIN DESIGN WEEK</a>
@@ -36,6 +36,7 @@
 	  <a href="/stur" class="block hover:text-gray-500 transition">STUR</a>
 	  <a href="/world-of-coffee" class="block hover:text-gray-500 transition">World of Coffee</a>
 	  <a href="/yamo" class="block hover:text-gray-500 transition">yamo</a>
+
 	</div>
   </section>
   
