refactor: added space between section items on md: screens, added a meaningful alt message to a floating vector image

--- a/src/components/branding-strategy.html
+++ b/src/components/branding-strategy.html
@@ -1,5 +1,5 @@
-<div class="lg:max-w-7xl mx-auto md:w-3/4 w-11/12">
-    <div class="pt-28 pb-10 flex justify-center flex-col">
+<section class="lg:max-w-7xl mx-auto lg:w-[100%] w-11/12">
+    <div class="pt-28 pb-10 flex justify-center flex-col w-[90%] mx-auto">
         <p class="lg:text-2xl text-lg">
             We are a Berlin-based communications agency specialising in helping
             companies and brands find their voice and position themselves. Whether
@@ -11,29 +11,23 @@
         </p>
         <div class="sticky top-0">
             <div class="flex justify-center z-10">
-                <img src="src/assets/Vector 6.png" class="mt-10 w-36" alt="Floating Vector" />
+                <img src="src/assets/Vector 6.png" class="mt-10 w-36" alt="Abstract yellow sticky floating vector graphic" />
             </div>
         </div>
     </div>
-    <div class="flex flex-wrap py-28 space-y-10 md:space-y-0">
+    <div class="flex flex-wrap py-28 space-y-10 lg:space-y-0">
         <div class="lg:w-1/2 w-full">
-            <ul class="lg:text-3xl text-xl font-bold w-3/4 xl:space-y-10 space-y-4 mx-auto">
+            <ul class="lg:text-3xl text-xl font-bold w-3/4 lg:space-y-10 space-y-4 mx-auto">
                 <li>Brand strategy</li>
-
                 <li>Corporate Identity & Website development</li>
-
                 <li>SEO & copywriting</li>
-
                 <li>Media Relations</li>
-
                 <li>Digital marketing & content production</li>
-
                 <li>Influencer relations</li>
             </ul>
         </div>
-        <div class="lg:w-1/2 w-full bg-no-repeat bg-contain object-center bg-center flex items-center justify-center text-sm h-[500px]"
-            style="background-image: url('src/assets/Vector 5.png')">
-            <p class="md:w-1/2 w-3/4 text-white px-5">
+        <div class="lg:w-1/2 w-full bg-no-repeat bg-contain object-center bg-center flex items-center justify-center text-sm h-[500px]" style="background-image: url('src/assets/Vector 5.png')">
+            <p class="md:w-1/2 w-3/4 text-white px-10 mx-auto">
                 Our strategic approach is a collaborative journey that starts with
                 analysing the initial situation and leads to messages that cut through
                 the information overload. We take care of content production and
@@ -43,4 +37,4 @@
             </p>
         </div>
     </div>
-</div>
+</section>
