--- a/src/components/privacy.html
+++ b/src/components/privacy.html
@@ -35,6 +35,24 @@
         may not be guaranteed. For this reason, every data subject is free to transfer personal data to us via
         alternative means, e.g. by telephone.
       </p>
+
+    </div>
+	<h2 class="text-2xl text-[#006838] mt-8 mb-4">1.Definitions</h2>
+    <div class="text-[#006838] text-lg leading-tight space-y-4">
+      <p>The data protection declaration of the Agentur Baumeister is based on the terms used by the European legislator for the adoption of the General Data Protection Regulation (GDPR). Our data protection declaration should be legible and understandable for the general public, as well as our customers and business partners. To ensure this, we would like to first explain the terminology used.</p>
+      <p>In this data protection declaration, we use, inter alia, the following terms:</p>
+      <p>• a) Personal data - Personal data means any information relating to an identified or identifiable natural person (“data subject”). An identifiable natural person is one who can be identified, directly or indirectly, in particular by reference to an identifier such as a name, an identification number, location data, an online identifier or to one or more factors specific to the physical, physiological, genetic, mental, economic, cultural or social identity of that natural person.</p>
+      <p>• b) Data subject - Data subject is any identified or identifiable natural person, whose personal data is processed by the controller responsible for the processing.</p>
+      <p>• c) Processing - Processing is any operation or set of operations which is performed on personal data or on sets of personal data, whether or not by automated means, such as collection, recording, organisation, structuring, storage, adaptation or alteration, retrieval, consultation, use, disclosure by transmission, dissemination or otherwise making available, alignment or combination, restriction, erasure or destruction.</p>
+      <p>• d) Restriction of processing - Restriction of processing is the marking of stored personal data with the aim of limiting their processing in the future.</p>
+      <p>• e) Profiling - Profiling means any form of automated processing of personal data consisting of the use of personal data to evaluate certain personal aspects relating to a natural person, in particular to analyse or predict aspects concerning that natural person's performance at work, economic situation, health, personal preferences, interests, reliability, behaviour, location or movements.</p>
+      <p>• f) Pseudonymisation - Pseudonymisation is the processing of personal data in such a manner that the personal data can no longer be attributed to a specific data subject without the use of additional information, provided that such additional information is kept separately and is subject to technical and organisational measures to ensure that the personal data are not attributed to an identified or identifiable natural person.</p>
+      <p>• g) Controller or controller responsible for the processing - Controller or controller responsible for the processing is the natural or legal person, public authority, agency or other body which, alone or jointly with others, determines the purposes and means of the processing of personal data; where the purposes and means of such processing are determined by Union or Member State law, the controller or the specific criteria for its nomination may be provided for by Union or Member State law.</p>
+      <p>• h) Processor - Processor is a natural or legal person, public authority, agency or other body which processes personal data on behalf of the controller.</p>
+      <p>• i) Recipient - Recipient is a natural or legal person, public authority, agency or another body, to which the personal data are disclosed, whether a third party or not. However, public authorities which may receive personal data in the framework of a particular inquiry in accordance with Union or Member State law shall not be regarded as recipients; the processing of those data by those public authorities shall be in compliance with the applicable data protection rules according to the purposes of the processing.</p>
+      <p>• j) Third party - Third party is a natural or legal person, public authority, agency or body other than the data subject, controller, processor and persons who, under the direct authority of the controller or processor, are authorised to process personal data.</p>
+      <p>• k) Consent - Consent of the data subject is any freely given, specific, informed and unambiguous indication of the data subject's wishes by which he or she, by a statement or by a clear affirmative action, signifies agreement to the processing of personal data relating to him or her.</p>
+	  .
     </div>
   </div>
 </body>
