--- a/src/components/privacy.html
+++ b/src/components/privacy.html
@@ -9,7 +9,7 @@
 <body class="bg-[#f8f5f0] min-h-screen flex justify-start items-center p-6">
   <div class="max-w-4xl w-full ml-16">
     <h1 class="text-3xl font-bold text-[#006838] mb-6">DATA PRIVACY</h1>
-    <h2 class="text-2xl font-bold text-[#006838] mb-6">PRIVACY POLICY</h2>
+    <h2 class="text-2xl  text-[#006838] mb-6">PRIVACY POLICY</h2>
     <div class="space-y-6 text-[#006838] text-lg">
       <p>
         We are very delighted that you have shown interest in our enterprise. Data protection is of a particularly
@@ -54,6 +54,146 @@
       <p>• k) Consent - Consent of the data subject is any freely given, specific, informed and unambiguous indication of the data subject's wishes by which he or she, by a statement or by a clear affirmative action, signifies agreement to the processing of personal data relating to him or her.</p>
 	  .
     </div>
+	<h2 class="text-2xl  text-[#006838] mt-8 mb-4">2. Name and Address of the Controller</h2>
+    <p class="text-[#006838] text-lg">
+      Controller for the purposes of the General Data Protection Regulation (GDPR), other data protection laws applicable in Member states of the European Union and other provisions related to data protection is:
+    </p>
+    <p class="text-[#006838] text-lg mt-4">Agentur Baumeister</p>
+    <p class="text-[#006838] text-lg">Böckhstraße 13<br>10967 Berlin<br>Germany</p>
+    <p class="text-[#006838] text-lg">Phone: 03049082787</p>
+    <p class="text-[#006838] text-lg">Email: katrein@agentur-baumeister.com</p>
+    <p class="text-[#006838] text-lg">Website: www.agentur-baumeister.com</p>
+
+    <h2 class="text-2xl  text-[#006838] mt-8 mb-4">3. Collection of General Data and Information</h2>
+<p class="text-[#006838] text-lg">
+	The website of the Agentur Baumeister collects a series of general data and information when a data subject or automated system calls up the website. This general data and information are stored in the server log files. Collected may be (1) the browser types and versions used, (2) the operating system used by the accessing system, (3) the website from which an accessing system reaches our website (so-called referrers), (4) the sub-websites, (5) the date and time of access to the Internet site, (6) an Internet protocol address (IP address), (7) the Internet service provider of the accessing system, and (8) any other similar data and information that may be used in the event of attacks on our information technology systems.
+</p>
+<p class="text-[#006838] text-lg mt-4">
+  When using these general data and information, the Agentur Baumeister does not draw any conclusions about the data subject. Rather, this information is needed to (1) deliver the content of our website correctly, (2) optimize the content of our website as well as its advertisement, (3) ensure the long-term viability of our information technology systems and website technology, and (4) provide law enforcement authorities with the information necessary for criminal prosecution in case of a cyber-attack. Therefore, the Agentur Baumeister analyzes anonymously collected data and information statistically, with the aim of increasing the data protection and data security of our enterprise, and to ensure an optimal level of protection for the personal data we process. The anonymous data of the server log files are stored separately from all personal data provided by a data subject.
+</p>
+
+
+    <h2 class="text-2xl text-[#006838] mt-8 mb-4">4. Routine Erasure and Blocking of Personal Data</h2>
+    <p class="text-[#006838] text-lg">
+		The data controller shall process and store the personal data of the data subject only for the period necessary to achieve the purpose of storage, or as far as this is granted by the European legislator or other legislators in laws or regulations to which the controller is subject to.
+		If the storage purpose is not applicable, or if a storage period prescribed by the European legislator or another competent legislator expires, the personal data are routinely blocked or erased in accordance with legal requirements.
+    </p>
+	<h2 class="text-2xl  text-[#006838] mt-8 mb-4">5. Rights of the Data Subject</h2>
+
+<h3 class="text-xl  text-[#006838] mt-6">. a) Right of Confirmation</h3>
+<p class="text-[#006838] text-lg">
+  Each data subject shall have the right granted by the European legislator to obtain from the controller the confirmation as to whether or not personal data concerning him or her are being processed. If a data subject wishes to avail himself of this right of confirmation, he or she may, at any time, contact any employee of the controller.
+</p>
+
+<h3 class="text-xl  text-[#006838] mt-6">. b) Right of Access</h3>
+<p class="text-[#006838] text-lg">
+  Each data subject shall have the right granted by the European legislator to obtain from the controller free information about his or her personal data stored at any time and a copy of this information. Furthermore, the European directives and regulations grant the data subject access to the following information:
+</p>
+
+<ul class="list-disc pl-6 text-[#006838] text-lg">
+  <li>The purposes of the processing;</li>
+  <li>The categories of personal data concerned;</li>
+  <li>The recipients or categories of recipients to whom the personal data have been or will be disclosed, in particular recipients in third countries or international organisations;</li>
+  <li>Where possible, the envisaged period for which the personal data will be stored, or, if not possible, the criteria used to determine that period;</li>
+  <li>The existence of the right to request from the controller rectification or erasure of personal data, or restriction of processing of personal data concerning the data subject, or to object to such processing;</li>
+  <li>The existence of the right to lodge a complaint with a supervisory authority;</li>
+  <li>Where the personal data are not collected from the data subject, any available information as to their source;</li>
+  <li>The existence of automated decision-making, including profiling, referred to in Article 22(1) and (4) of the GDPR and, at least in those cases, meaningful information about the logic involved, as well as the significance and envisaged consequences of such processing for the data subject.</li>
+</ul>
+<p class="text-[#006838] text-lg">
+	. Furthermore, the data subject shall have a right to obtain information as to whether personal data are transferred to a third country or to an international organisation. Where this is the case, the data subject shall have the right to be informed of the appropriate safeguards relating to the transfer.If a data subject wishes to avail himself of this right of access, he or she may, at any time, contact any employee of the controller.
+</p>
+
+<h3 class="text-xl  text-[#006838] mt-6">. c) Right to Rectification</h3>
+<p class="text-[#006838] text-lg">
+  Each data subject shall have the right granted by the European legislator to obtain from the controller without undue delay the rectification of inaccurate personal data concerning him or her. Taking into account the purposes of the processing, the data subject shall have the right to have incomplete personal data completed, including by means of providing a supplementary statement.
+</p>
+
+<h3 class="text-xl  text-[#006838] mt-6">. d) Right to Erasure (Right to be Forgotten)</h3>
+<p class="text-[#006838] text-lg">
+  Each data subject shall have the right granted by the European legislator to obtain from the controller the erasure of personal data concerning him or her without undue delay, and the controller shall have the obligation to erase personal data without undue delay where one of the following grounds applies:
+</p>
+<ul class="list-disc pl-6 text-[#006838] text-lg">
+  <li>The personal data are no longer necessary in relation to the purposes for which they were collected or otherwise processed.</li>
+  <li>The data subject withdraws consent on which the processing is based, and where there is no other legal ground for the processing.</li>
+  <li>The data subject objects to the processing and there are no overriding legitimate grounds for the processing.</li>
+  <li>The personal data have been unlawfully processed.</li>
+  <li>The personal data must be erased for compliance with a legal obligation in Union or Member State law to which the controller is subject.</li>
+  <li>The personal data have been collected in relation to the offer of information society services referred to in Article 8(1) of the GDPR.</li>
+</ul>
+<p class="text-[#006838] text-lg mt-4">
+	. If one of the aforementioned reasons applies, and a data subject wishes to request the erasure of personal data stored by the Agentur Baumeister, he or she may, at any time, contact any employee of the controller. An employee of Agentur Baumeister shall promptly ensure that the erasure request is complied with immediately.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	Where the controller has made personal data public and is obliged pursuant to Article 17(1) to erase the personal data, the controller, taking account of available technology and the cost of implementation, shall take reasonable steps, including technical measures, to inform other controllers processing the personal data that the data subject has requested erasure by such controllers of any links to, or copy or replication of, those personal data, as far as processing is not required. An employee of the Agentur Baumeister will arrange the necessary measures in individual cases.
+  </p>
+
+<h3 class="text-xl  text-[#006838] mt-6">. e) Right of Restriction of Processing</h3>
+<p class="text-[#006838] text-lg">
+  Each data subject shall have the right granted by the European legislator to obtain from the controller restriction of processing where one of the following applies:
+</p>
+<ul class="list-disc pl-6 text-[#006838] text-lg">
+  <li>The accuracy of the personal data is contested by the data subject.</li>
+  <li>The processing is unlawful and the data subject opposes erasure and requests restriction instead.</li>
+  <li>The controller no longer needs the personal data but requires them for legal claims.</li>
+  <li>
+    The data subject has objected to processing pursuant to Article 21(1) of the GDPR pending the verification whether the legitimate grounds of the controller override those of the data subject.
+  </li>
+</ul>
+<p class="text-[#006838] text-lg mt-4">
+	. If one of the aforementioned conditions is met, and a data subject wishes to request the restriction of the processing of personal data stored by the Agentur Baumeister, he or she may at any time contact any employee of the controller. The employee of the Agentur Baumeister will arrange the restriction of the processing.
+  </p>
+
+  <h3 class="text-xl  text-[#006838] mt-6">. f) Right to Data Portability</h3>
+  <p class="text-[#006838] text-lg">
+	Each data subject shall have the right granted by the European legislator to receive the personal data concerning him or her, which was provided to a controller, in a structured, commonly used, and machine-readable format. He or she shall have the right to transmit those data to another controller without hindrance from the controller to which the personal data have been provided, as long as the processing is based on consent pursuant to point (a) of Article 6(1) of the GDPR or point (a) of Article 9(2) of the GDPR, or on a contract pursuant to point (b) of Article 6(1) of the GDPR, and the processing is carried out by automated means, as long as the processing is not necessary for the performance of a task carried out in the public interest or in the exercise of official authority vested in the controller.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	Furthermore, in exercising his or her right to data portability pursuant to Article 20(1) of the GDPR, the data subject shall have the right to have personal data transmitted directly from one controller to another, where technically feasible and when doing so does not adversely affect the rights and freedoms of others.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	In order to assert the right to data portability, the data subject may at any time contact any employee of the Agentur Baumeister.
+  </p>
+  
+
+  <h3 class="text-xl text-[#006838] mt-6">. g) Right to Object</h3>
+  <p class="text-[#006838] text-lg">
+	Each data subject shall have the right granted by the European legislator to object, on grounds relating to his or her particular situation, at any time, to processing of personal data concerning him or her, which is based on point (e) or (f) of Article 6(1) of the GDPR. This also applies to profiling based on these provisions.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	The Agentur Baumeister shall no longer process the personal data in the event of the objection, unless we can demonstrate compelling legitimate grounds for the processing which override the interests, rights, and freedoms of the data subject, or for the establishment, exercise, or defence of legal claims.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	If the Agentur Baumeister processes personal data for direct marketing purposes, the data subject shall have the right to object at any time to processing of personal data concerning him or her for such marketing. This applies to profiling to the extent that it is related to such direct marketing. If the data subject objects to the Agentur Baumeister to the processing for direct marketing purposes, the Agentur Baumeister will no longer process the personal data for these purposes.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	In addition, the data subject has the right, on grounds relating to his or her particular situation, to object to processing of personal data concerning him or her by the Agentur Baumeister for scientific or historical research purposes, or for statistical purposes pursuant to Article 89(1) of the GDPR, unless the processing is necessary for the performance of a task carried out for reasons of public interest.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	In order to exercise the right to object, the data subject may contact any employee of the Agentur Baumeister. In addition, the data subject is free in the context of the use of information society services, and notwithstanding Directive 2002/58/EC, to use his or her right to object by automated means using technical specifications.
+  </p>
+  
+
+  <h3 class="text-xl  text-[#006838] mt-6">. h) Automated Individual Decision-Making, Including Profiling</h3>
+  <p class="text-[#006838] text-lg">
+	Each data subject shall have the right granted by the European legislator not to be subject to a decision based solely on automated processing, including profiling, which produces legal effects concerning him or her, or similarly significantly affects him or her, as long as the decision (1) is not necessary for entering into, or the performance of, a contract between the data subject and a data controller, or (2) is not authorised by Union or Member State law to which the controller is subject and which also lays down suitable measures to safeguard the data subject's rights and freedoms and legitimate interests, or (3) is not based on the data subject's explicit consent.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	If the decision (1) is necessary for entering into, or the performance of, a contract between the data subject and a data controller, or (2) it is based on the data subject's explicit consent, the Agentur Baumeister shall implement suitable measures to safeguard the data subject's rights and freedoms and legitimate interests, at least the right to obtain human intervention on the part of the controller, to express his or her point of view, and contest the decision.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	If the data subject wishes to exercise the rights concerning automated individual decision-making, he or she may, at any time, contact any employee of the Agentur Baumeister.
+  </p>
+  
+
+  <h3 class="text-xl  text-[#006838] mt-6">. i) Right to Withdraw Data Protection Consent</h3>
+  <p class="text-[#006838] text-lg">
+	Each data subject shall have the right granted by the European legislator to withdraw his or her consent to processing of his or her personal data at any time.
+  </p>
+  <p class="text-[#006838] text-lg mt-4">
+	If the data subject wishes to exercise the right to withdraw the consent, he or she may, at any time, contact any employee of the Agentur Baumeister.
+  </p>
+  
   </div>
 </body>
 </html>
